--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="manifest" href="manifest.json">
 <script type="module">
+    navigator.serviceWorker.register("fetch-worker.js");
+
     import * as sgs from './sgs.js';
     window.sgs = sgs;
 
