--- a/web/index.html
+++ b/web/index.html
@@ -46,8 +46,8 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
 }
 </style>
 <canvas id="canvas"></canvas>
